--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,9 @@ tasks.withType(Test) {
         }
     }
 }
+
+task api_test(type: Test) {
+     useJUnitPlatform{
+         includeTags("api")
+     }
+}
